--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
+    "fetch": "^1.1.0",
     "nodemailer": "^6.4.6",
     "nodemon": "^2.0.3",
     "xoauth2": "^1.2.0"
